Added authorization and authentication using JWT